# ir4_tool_calibration

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: urdf_info.yaml
include/tool_point_calibration/: tool_calibration_server.h  tool_point_calibration.h
launch/: orientation_calibration.launch  tool_calibration.launch
scripts/: calibration_urdf_server.py
src/: console_calibration.cpp  tcp_orientation_calibration.cpp  tool_calibration_server.cpp  tool_orientation_calibration.cpp  tool_point_calibration.cpp
tool_calibration/: CMakeLists.txt.NOBUILD  package.xml  setup.py
tool_calibration/config/: urdf_info.yaml
tool_calibration/include/tool_calibration/: tool_calibration_server.h  tool_point_calibration.h
tool_calibration/launch/: calibration_urdf_server.launch  tool_calibration_server.launch
tool_calibration/scripts/: calibration_urdf_server.py
tool_calibration/src/: tool_calibration_server.cpp  tool_point_calibration.cpp
tool_calibration/srv/: CalibrationUrdfUpdate.srv
tool_point_calibration/: CMakeLists.txt  package.xml
tool_point_calibration/launch/: calibration_urdf_server.launch  tool_calibration_server.launch
tool_point_calibration/scripts/: calibration_urdf_server.py
tool_point_calibration/src/: tool_calibration_server.cpp
tool_point_calibration/srv/: CalibrationUrdfRetrieve.srv  CalibrationUrdfUpdate.srv
